# RSA

./: readme.md
app/: build.gradle
app/src/androidTest/java/com/test/rsa/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  RSAUtils.cpp  RSAUtils.h  native-lib.cpp
app/src/main/cpp/openssl/: crypto.h
app/src/main/java/com/test/rsa/: MainActivity.java  RSAUtils.java
app/src/test/java/com/test/rsa/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
